@@ -42,7 +42,6 @@ import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.PrintStream;
 import java.io.Writer;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -283,7 +282,7 @@ public class ActionSimulatorTool implements Tool {
                 ParallelLoadFlowActionSimulator actionSimulator = new ParallelLoadFlowActionSimulator(network,
                         context.getLongTimeExecutionComputationManager(), taskCount, config, applyIfSolved, resultHandlers);
 
-                String dsl = new String(Files.readAllBytes(dslFile), StandardCharsets.UTF_8);
+                String dsl = Files.readString(dslFile);
                 actionSimulator.run(dsl, contingencies);
             } else {
 
